# 1Way

./: CMakeLists.txt  README.md
plugins/: CMakeLists.txt  README.md
plugins/Cursor/: CMakeLists.txt  Cursor.qml  MousePointer.cpp  MousePointer.h
plugins/Utils/: CMakeLists.txt
plugins/WindowManager/: CMakeLists.txt  TopLevelWindowModel.cpp
qml/: ApplicationWindow.qml  CMakeLists.txt  Cursor.qml  Shell.qml  Stage.qml  SurfaceContainer.qml  Topbar.qml  Wallpaper.qml
src/: QMLShell.cc  QMLShell.h  ShellView.cc  ShellView.h  main.cc
